multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: jupiter
    image: nginx
    env:
    - name: "type"
      value: "planet"
  - name: europa
    image: busybox
    env:
    - name: "type"
      value: "mooon"
