my-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    tier: frontend
  name: my-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-webap
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-webap
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
